force-app/main/default/objects/Race__c/fields/Laps__c.field-meta.xml
<CustomField>
    <fullName>Laps__c</fullName>
    <description>Number of Laps</description>
    <label>Laps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>