force-app/main/default/objects/Race__c/fields/Podium_Third__c.field-meta.xml
<CustomField>
    <fullName>Podium_Third__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>3rd</description>
    <label>Podium Third</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Races (Podium Third)</relationshipLabel>
    <relationshipName>Races1</relationshipName>
    <type>Lookup</type>
</CustomField>