force-app/main/default/objects/Race__c/validationRules/Results.validationRule-meta.xml
<ValidationRule>
    <fullName>Results</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Winner__c ==  Podium_Second__c, 
Winner__c == Podium_Third__c,
Podium_Second__c == Podium_Third__c)</errorConditionFormula>
    <errorMessage>Results have to be unique</errorMessage>
</ValidationRule>